infra/controller-deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeguard
---
apiVersion: v1
kind: Service
metadata:
  name: kubeguard-controller
  namespace: kubeguard
spec:
  selector:
    app: kubeguard-controller
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeguard-controller
  namespace: kubeguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeguard-controller
  template:
    metadata:
      labels:
        app: kubeguard-controller
    spec:
      serviceAccountName: kubeguard-sa
      containers:
      - name: controller
        image: kubeguard-controller:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
